--- a/scss/sections/_main-layout.scss
+++ b/scss/sections/_main-layout.scss
@@ -10,6 +10,9 @@ body{
     margin: 0 auto !important;
     float: none !important;
     .big-koala{
+        h2{
+            text-align: center;
+        }
         p{
             text-align: center;
             padding: 20px;
@@ -21,6 +24,7 @@ body{
             width: 95%;
             border: solid black 2px;
             max-height: 90vh;
+            max-width: 745px;
         }
     }
     .first-section{
